fix odd spacings

--- a/index.css
+++ b/index.css
@@ -548,7 +548,7 @@ body {
 
     }
 
-    & main {
+    & > main {
         grid-row: 3;
         grid-column: 1 / 3;
         height: 100%;
@@ -589,8 +589,8 @@ body {
             list-style: none;
             display: flex;
             flex-wrap: wrap;
-            justify-content: space-evenly;
-            gap: 0.5em;
+            justify-content: center;
+            gap: 0.5em 1.5em;
             min-width: 20em;
             width: 100%;
             margin: 0;
